--- a/PPcore/src/PPcore/project.json
+++ b/PPcore/src/PPcore/project.json
@@ -33,7 +33,8 @@
       "type": "build"
     },
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0-rc2-final",
-    "Microsoft.AspNet.WebApi.Client": "5.2.2"
+    "Microsoft.AspNet.WebApi.Client": "5.2.2",
+    "Microsoft.AspNet.Identity.EntityFramework": "2.2.1"
   },
 
   "tools": {
